Support up to Build: 1.4.0+dev76

--- a/fsw/sp0-vxworks6.9/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/CMakeLists.txt
@@ -1,6 +1,21 @@
 
+######################################################################
+#
+# CMAKE build recipe for shared PSP component
+#
+######################################################################
+
+# This contains supplemental code to support running CFE
+# on a variety of targets.
+#
+# Note this shared PSP code is currently built against headers provided by the
+# target implementation.  This makes it implementation-specific even though
+# the same source code is used with multiple targets.
+
+include_directories(inc)
+
 # Build the sp0-vxworks implementation as a library
-add_library(psp-${CFE_SYSTEM_PSPNAME}-impl OBJECT
+add_library(psp-${CFE_PSP_TARGETNAME}-impl OBJECT
     src/cfe_psp_exception.c
     src/cfe_psp_memory.c
     src/cfe_psp_memtab.c
