GWCFS-660 Sync CFE Time Service with VxWorks local time

--- a/fsw/sp0-vxworks6.9/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/CMakeLists.txt
@@ -13,6 +13,7 @@
 # the same source code is used with multiple targets.
 
 include_directories(inc)
+include_directories(${MISSION_SOURCE_DIR}/cfe/fsw/cfe-core/src/time)
 
 # Build the sp0-vxworks implementation as a library
 add_library(psp-${CFE_PSP_TARGETNAME}-impl OBJECT
