PSP fixes to cmake and code

--- a/fsw/sp0-vxworks6.9/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/CMakeLists.txt
@@ -12,9 +12,6 @@
 # target implementation.  This makes it implementation-specific even though
 # the same source code is used with multiple targets.
 
-include_directories(inc)
-include_directories(${MISSION_SOURCE_DIR}/cfe/fsw/cfe-core/src/time)
-
 # To support the starting and killing of NTP daemon process
 include_directories(${WIND_HOME}/components/ip_net2-6.9/ipcom/include)
 include_directories(${WIND_HOME}/components/ip_net2-6.9/ipcom/config)
@@ -25,11 +22,23 @@ include_directories(${WIND_HOME}/components/ip_net2-6.9/ipcom/port/vxworks/inclu
 add_library(psp-${CFE_PSP_TARGETNAME}-impl OBJECT
     src/cfe_psp_exception.c
     src/cfe_psp_memory.c
-    src/cfe_psp_memtab.c
+    #src/cfe_psp_memtab.c   # No longer needed
     src/cfe_psp_start.c
     src/cfe_psp_support.c
-    src/cfe_psp_timer.c
+    #src/cfe_psp_timer.c    # Will move to PSP Modules
     src/cfe_psp_watchdog.c)
+
+target_compile_definitions(psp-${CFE_SYSTEM_PSPNAME}-impl PRIVATE
+    $<TARGET_PROPERTY:psp_module_api,INTERFACE_COMPILE_DEFINITIONS>
+)
+
+target_include_directories(psp-${CFE_PSP_TARGETNAME}-impl PRIVATE
+    inc
+    $<TARGET_PROPERTY:psp_module_api,INTERFACE_INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:core_api,INTERFACE_INCLUDE_DIRECTORIES>
+    $<TARGET_PROPERTY:time,INTERFACE_INCLUDE_DIRECTORIES>
+)
+
 
 # Add unit test, if enabled
 if (ENABLE_UNIT_TESTS)
