Converted PSP changes to new PSP stable branch

--- a/fsw/modules/ntp_clock_vxworks/CMakeLists.txt
+++ b/fsw/modules/ntp_clock_vxworks/CMakeLists.txt
@@ -7,5 +7,7 @@ include_directories(${WIND_HOME}/components/ip_net2-6.9/ipcom/config)
 include_directories(${WIND_HOME}/components/ip_net2-6.9/ipcom/port/vxworks/config)
 include_directories(${WIND_HOME}/components/ip_net2-6.9/ipcom/port/vxworks/include)
 
+set_source_files_properties(cfe_psp_ntp.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
+
 # Create the module
 add_psp_module(ntp_clock_vxworks cfe_psp_ntp.c)
