--- a/fsw/pc-linux/CMakeLists.txt
+++ b/fsw/pc-linux/CMakeLists.txt
@@ -4,6 +4,14 @@
 #
 ######################################################################
 
+set_source_files_properties(cfe_psp_exception.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
+set_source_files_properties(cfe_psp_memory.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
+set_source_files_properties(cfe_psp_memtab.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
+set_source_files_properties(cfe_psp_ssr.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
+set_source_files_properties(cfe_psp_start.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
+set_source_files_properties(cfe_psp_support.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
+set_source_files_properties(cfe_psp_watchdog.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
+
 # This contains the fully platform-specific code to
 # run CFE on this target.
 
