--- a/fsw/sp0-vxworks6.9/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/CMakeLists.txt
@@ -26,7 +26,8 @@ add_library(psp-${CFE_PSP_TARGETNAME}-impl OBJECT
     src/cfe_psp_memory.c
     src/cfe_psp_start.c
     src/cfe_psp_support.c
-    src/cfe_psp_watchdog.c)
+    src/cfe_psp_watchdog.c
+    src/cfe_psp_sp0_info.c)
 
 target_compile_definitions(psp-${CFE_SYSTEM_PSPNAME}-impl PRIVATE
     $<TARGET_PROPERTY:psp_module_api,INTERFACE_COMPILE_DEFINITIONS>
