Added linux header symlink and headers to ntp sync code

--- a/fsw/modules/ntp_clock_linux/CMakeLists.txt
+++ b/fsw/modules/ntp_clock_linux/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(${MISSION_SOURCE_DIR}/cfe/modules/core_api/fsw/inc)
+include_directories(${MISSION_SOURCE_DIR}/psp/fsw/${CFE_SYSTEM_PSPNAME}/inc)
 
 set_source_files_properties(cfe_psp_ntp.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
 
