--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,14 +71,15 @@ if (ENABLE_UNIT_TESTS)
     # Figure out if the compiler is for a real target
     set(RUN_ON_TARGET 0)
     string(FIND ${CMAKE_C_COMPILER} "ccppc" RUN_ON_TARGET)
-    message("RUN_ON_TARGET: " ${RUN_ON_TARGET})
+    set(PSP_UT_PRE "PSP UT: ")
     if (RUN_ON_TARGET GREATER 0)
       # Prepare for Unit Test on Target
-      message("Preparing for Unit Test on Target")
+      message(${PSP_UT_PRE} "Preparing for Unit Test on SP0 with Code Coverage")
+      set(CODE_COVERAGE TRUE)
       add_subdirectory(fsw/${CFE_PSP_TARGETNAME}/unit_test)
     else(RUN_ON_TARGET GREATER 0)
       # Prepare for Unit Test on Linux (This is maintained by Github upstream PSP)
-      message("Preparing for Unit Test on Linux")
+      message(${PSP_UT_PRE} "Preparing for Unit Test on Linux")
       add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ut-stubs)
       add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/unit-test-coverage)
     endif(RUN_ON_TARGET GREATER 0)
