GWCFS-311-psp-create-functional-tests-for-sp0-vxworks6-9-psp

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ fsw/sp0-vxworks6.9/unit_test/runs
 fsw/sp0-vxworks6.9/unit_test/html
 fsw/sp0-vxworks6.9/unit_test/tcl_scripts/~
 fsw/sp0-vxworks6.9/unit_test/payload
+
+### Functional Test temporary files
+fsw/sp0-vxworks6.9/functional_test/payload
+fsw/sp0-vxworks6.9/functional_test/tcl_scripts/~
