GWCFS-1140-psp-implement-restart-logic-during-after-cfs-startup-failure

--- a/fsw/sp0-vxworks6.9/unit_test/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/unit_test/CMakeLists.txt
@@ -76,6 +76,7 @@ target_compile_definitions(${UT_NAME}_ut PRIVATE
     OS_Application_Run=UT_OS_Application_Run
     OS_BSPMain=PCS_OS_BSPMain
     snprintf=PCS_snprintf
+    bootStringToStruct=PCS_bootStringToStruct
 )
 
 # To support the starting and killing of NTP daemon process (NTP Sync Module)
