GWCFS-1251-psp-code-clean-up-and-integration

--- a/fsw/sp0-vxworks6.9/unit_test/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/unit_test/CMakeLists.txt
@@ -65,7 +65,7 @@ endif()
 ### ### ###
 
 # Source for this app's UT executable
-aux_source_directory(ut_stubs UT_SRCS)
+aux_source_directory(${IMPL_DIR}/unit_test/ut_stubs UT_SRCS)
 
 add_executable(${UT_NAME}_ut ${UT_SRCS})
 
