GWCFS-1268-psp-draco-functional-test-and-ut-fixes

--- a/fsw/sp0-vxworks6.9/functional_test/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/functional_test/CMakeLists.txt
@@ -15,6 +15,9 @@ set(IMPL_DIR ${MISSION_SOURCE_DIR}/${FT_NAME}/fsw/${CFE_SYSTEM_PSPNAME})
 
 # Source for this app's UT executable
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/ FT_SRCS)
+list(APPEND FT_SRCS /users/colmi/cert_testbed/build/powerpc-sp0-vxworks/default_vx_es2/vx_es2/cfe_psp_module_list.c)
+list(APPEND FT_SRCS /users/colmi/cert_testbed/build/powerpc-sp0-vxworks/default_vx_es2/vx_es2/cfe_static_module_list.c)
+list(APPEND FT_SRCS /users/colmi/cert_testbed/build/powerpc-sp0-vxworks/default_vx_es2/vx_es2/cfe_static_symbol_list.c)
 
 add_executable(${FT_NAME}_ft ${FT_SRCS})
 
@@ -24,22 +27,24 @@ target_include_directories(${FT_NAME}_ft PRIVATE
     $<TARGET_PROPERTY:time,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:core_api,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:osal,INTERFACE_INCLUDE_DIRECTORIES>
-)
+) 
 
 target_link_libraries(${FT_NAME}_ft
     core_api
     core_private
+    config
     es
     evs
     fs
+    gateway_msg
+    osal
     resourceid
     sb
     sbr
     tbl
     time
-    osal
-    gateway_msg
     psp_module_api
+    soft_timebase
     timebase_vxworks
     psp-${CFE_PSP_TARGETNAME}-impl
     psp-${CFE_PSP_TARGETNAME}-shared
