GWCFS-1233-psp-capture-unit-and-functional-tests-console-output

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ docs/*.pdf
 ### Unit Test temporary files
 fsw/sp0-vxworks6.9/unit_test/tmp_code_coverage
 fsw/sp0-vxworks6.9/unit_test/*.zip
+fsw/sp0-vxworks6.9/unit_test/*.log
 fsw/sp0-vxworks6.9/unit_test/db
 fsw/sp0-vxworks6.9/unit_test/runs
 fsw/sp0-vxworks6.9/unit_test/html
@@ -13,3 +14,4 @@ fsw/sp0-vxworks6.9/unit_test/payload
 ### Functional Test temporary files
 fsw/sp0-vxworks6.9/functional_test/payload
 fsw/sp0-vxworks6.9/functional_test/tcl_scripts/~
+fsw/sp0-vxworks6.9/functional_test/*.log
