GWCFS-1295-psp-phase-out-int-type-usage

--- a/fsw/sp0-vxworks6.9/unit_test/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/unit_test/CMakeLists.txt
@@ -64,6 +64,9 @@ endif()
 
 ### ### ###
 
+# Remove stop on error flag so that compiler can skip over the Coverage intermediate files
+add_compile_options(-w)
+
 # Source for this app's UT executable
 aux_source_directory(${IMPL_DIR}/unit_test/ut_stubs UT_SRCS)
 
