GWCFS-1351-psp-add-method-for-assigning-cores-in-multicore-targets

--- a/fsw/sp0-vxworks6.9/functional_test/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/functional_test/CMakeLists.txt
@@ -9,15 +9,11 @@
 
 set (FT_NAME "psp")
 
-# PROJECT_SOURCE_DIR is $HOME/cert_testbed/psp
-# CMAKE_CURRENT_SOURCE_DIR is $HOME/cert_testbed/psp/fsw/sp0-vxworks6.9/funtional_test
-set(IMPL_DIR ${MISSION_SOURCE_DIR}/${FT_NAME}/fsw/${CFE_SYSTEM_PSPNAME})
-
 # Source for this app's UT executable
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/ FT_SRCS)
-list(APPEND FT_SRCS /users/colmi/cert_testbed/build/powerpc-sp0-vxworks/default_vx_es2/vx_es2/cfe_psp_module_list.c)
-list(APPEND FT_SRCS /users/colmi/cert_testbed/build/powerpc-sp0-vxworks/default_vx_es2/vx_es2/cfe_static_module_list.c)
-list(APPEND FT_SRCS /users/colmi/cert_testbed/build/powerpc-sp0-vxworks/default_vx_es2/vx_es2/cfe_static_symbol_list.c)
+list(APPEND FT_SRCS ${CMAKE_BINARY_DIR}/vx_es2/cfe_psp_module_list.c)
+list(APPEND FT_SRCS ${CMAKE_BINARY_DIR}/vx_es2/cfe_static_module_list.c)
+list(APPEND FT_SRCS ${CMAKE_BINARY_DIR}/vx_es2/cfe_static_symbol_list.c)
 
 add_executable(${FT_NAME}_ft ${FT_SRCS})
 
