--- a/ut-stubs/CMakeLists.txt
+++ b/ut-stubs/CMakeLists.txt
@@ -1,7 +1,13 @@
 # Public cfe_psp.h stubs, shared stubs
 aux_source_directory(shared/src SHARED_SRC)
-aux_source_directory(sp0-vxworks6.9/src SP0VXWORKS_SRC)
-add_library(ut_psp-${CFE_PSP_TARGETNAME}_stubs ut_psp_stubs.c ${SHARED_SRC} ${SP0VXWORKS_SRC} ${LINUX_SRC})
+
+# Sets the target name (not available in toolchain file when working with stubs)
+set(STUB_TARGET_NAME "sp0-vxworks6.9")
+
+aux_source_directory(${STUB_TARGET_NAME}/src STUB_TARGET_NAME_SRC)
+
+add_library(ut_psp-${CFE_PSP_TARGETNAME}_stubs ut_psp_stubs.c ${SHARED_SRC} ${STUB_TARGET_NAME_SRC} ${LINUX_SRC})
+
 target_link_libraries(ut_psp-${CFE_PSP_TARGETNAME}_stubs PRIVATE 
     psp_module_api
     ut_assert
@@ -10,10 +16,10 @@ target_link_libraries(ut_psp-${CFE_PSP_TARGETNAME}_stubs PRIVATE
 target_include_directories(ut_psp-${CFE_PSP_TARGETNAME}_stubs PUBLIC
     #${psp_MISSION_DIR}/ut-stubs/shared/inc
     ${psp_MISSION_DIR}/fsw/shared/inc
-    ${psp_MISSION_DIR}/ut-stubs/sp0-vxworks6.9/inc
+    ${psp_MISSION_DIR}/ut-stubs/${STUB_TARGET_NAME}/inc
 )
 
 add_cfe_coverage_stubs("ut_psp-${CFE_PSP_TARGETNAME}_stubs"
     ${SHARED_SRC}
-    ${SP0VXWORKS_SRC}
+    ${STUB_TARGET_NAME_SRC}
 )
