--- a/fsw/pc-linux/CMakeLists.txt
+++ b/fsw/pc-linux/CMakeLists.txt
@@ -4,15 +4,6 @@
 #
 ######################################################################
 
-set_source_files_properties(cfe_psp_exception.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
-set_source_files_properties(cfe_psp_memory.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
-set_source_files_properties(cfe_psp_memtab.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
-set_source_files_properties(cfe_psp_ssr.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
-set_source_files_properties(cfe_psp_start.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
-set_source_files_properties(cfe_psp_support.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
-set_source_files_properties(cfe_psp_watchdog.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
-set_source_files_properties(cfe_psp_ntp.c PROPERTIES COMPILE_FLAGS -Werror=conversion -Werror=sign-conversion -Werror=all)
-
 # This contains the fully platform-specific code to
 # run CFE on this target.
 
@@ -25,6 +16,7 @@ add_library(psp-${CFE_PSP_TARGETNAME}-impl OBJECT
     src/cfe_psp_support.c
     src/cfe_psp_watchdog.c
     src/cfe_psp_ntp.c
+    src/cfe_psp_memscrub.c
 )
 
 # The _GNU_SOURCE directive is required to call non-posix APIs
