GWCFS-1687-psp-add-extra-notes-about-cfe_psp_kernelloadnew

--- a/fsw/gr740-vxworks6.9/functional_test/CMakeLists.txt
+++ b/fsw/gr740-vxworks6.9/functional_test/CMakeLists.txt
@@ -36,9 +36,9 @@ target_link_libraries(${FT_NAME}_ft
     evs
     fs
     gateway_msg
+    gateway_sb
     osal
     resourceid
-    sb
     sbr
     tbl
     time
