GWCFS-1788-move-other-headers-for-jsc-apps-to-inc

--- a/fsw/sp0-vxworks6.9/functional_test/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/functional_test/CMakeLists.txt
@@ -15,6 +15,9 @@ list(APPEND FT_SRCS ${CMAKE_BINARY_DIR}/${TGT_NAME}/cfe_psp_module_list.c)
 list(APPEND FT_SRCS ${CMAKE_BINARY_DIR}/${TGT_NAME}/cfe_static_module_list.c)
 list(APPEND FT_SRCS ${CMAKE_BINARY_DIR}/${TGT_NAME}/cfe_static_symbol_list.c)
 
+file(TOUCH ${CMAKE_BINARY_DIR}/../../src/cfe_build_env_table.c)
+file(TOUCH ${CMAKE_BINARY_DIR}/../../src/cfe_module_version_table.c)
+
 list(APPEND FT_SRCS ${CMAKE_BINARY_DIR}/../../src/cfe_build_env_table.c)
 list(APPEND FT_SRCS ${CMAKE_BINARY_DIR}/../../src/cfe_module_version_table.c)
 
