GWCFS-2335 PSP - Create Functional and Unit test for PSP-Ping

--- a/fsw/sp0-vxworks6.9/functional_test/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/functional_test/CMakeLists.txt
@@ -50,6 +50,7 @@ target_link_libraries(${FT_NAME}_ft
     timebase_vxworks
     iodriver
     vxworks_sysmon
+    ping
     psp-${CFE_PSP_TARGETNAME}-impl
     psp-${CFE_PSP_TARGETNAME}-shared
     )
