GWCFS-2470 PSP - Address Startup Bugs

--- a/fsw/sp0-vxworks6.9/unit_test/CMakeLists.txt
+++ b/fsw/sp0-vxworks6.9/unit_test/CMakeLists.txt
@@ -95,6 +95,7 @@ target_compile_definitions(${UT_NAME}_ut PRIVATE
     OS_BSPMain=PCS_OS_BSPMain
     snprintf=PCS_snprintf
     bootStringToStruct=PCS_bootStringToStruct
+    bootStructToString=PCS_bootStructToString
     spyClkStartCommon=PCS_spyClkStartCommon
 )
 
